config changed. user_description

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ google_analytics: "UA-42914037-3"
 
 # User Settings
 username: Cremazer
-user_description: South Korea. Web developer.(from 2009)
+user_description: Republic of Korea. Web developer.(from 2009)
 disqus_username: kyuseoshim
 
 # Social Media
